postgres-macros/tests/fail-nightly/scalar_mismatch.stderr
error[E0271]: type mismatch resolving `<String as SqlType>::Type == i64`
 --> tests/fail-nightly/scalar_mismatch.rs:5:56
  |
5 |     let _: String = sql!("SELECT COUNT(*) FROM users").await.unwrap();
  |                                                        ^^^^^ expected `i64`, found `String`
  |
  = note: required for `Sql<'_, Primitive<i64>, String>` to implement `IntoFuture`
